Ban cap nhat them tinh nang nghe youtube

--- a/app/local.properties
+++ b/app/local.properties
@@ -7,5 +7,5 @@
 # Location of the SDK. This is only used by Gradle.
 # For customization when using a Version Control System, please read the
 # header note.
-#Sat Jan 06 04:41:22 ICT 2018
-sdk.dir=F\:\\AS\\SDK
+#Tue Jan 16 07:33:27 ICT 2018
+sdk.dir=H\:\\Users\\tus\\AppData\\Local\\Android\\Sdk
